modified terraform and scripts to set /etc/hosts upon boot via confd and consul